feat: Now you can open client-app with .jar file